--- a/package.json
+++ b/package.json
@@ -2,15 +2,13 @@
   "name": "frontend_mod5_project",
   "version": "0.1.0",
   "private": true,
-  "engines": {
-    "npm": "6.14.8",
-    "node": "14.7.0"
-  },
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "animate.css": "^4.1.1",
+    "node": "^15.0.1",
+    "npm": "^6.14.8",
     "react": "^16.13.1",
     "react-animated-css": "^1.2.1",
     "react-dom": "^16.13.1",
